Fix silly mistake caused by a refactor